Changed Friend Show Flip Card to a Modal, also fixed card size for overflow text and removed product name truncation

--- a/app/assets/stylesheets/components/_flip.scss
+++ b/app/assets/stylesheets/components/_flip.scss
@@ -42,6 +42,6 @@
 
 .flip-card-front {
   border-radius: 4px;
-  height: 320px;
-  padding: 8px 8px 16px;
+  // height: 320px;
+  padding: 8px;
 }
